--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,41 @@
 
 
     <properties>
+        <slf4j.version>1.7.7</slf4j.version>
+        <logback.version>1.0.7</logback.version>
+
         <kafka-client.version>1.1.0</kafka-client.version>
         <spark-streaming_211.version>2.3.0</spark-streaming_211.version>
 
         <spark.version>2.2.0</spark.version>
         <kafka.version>0.11.0.0</kafka.version>
+
+        <!--<scala.version>2.11.0</scala.version>-->
+        <scala.version>2.11.8</scala.version>
+        <hadoop.common.version>2.4.1</hadoop.common.version>
     </properties>
 
 
     <dependencies>
+        <!-- For logging purpose -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+
+
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -39,7 +65,6 @@
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
             <version>2.1.1</version>
         </dependency>
-
 
 
         <dependency>
@@ -80,67 +105,55 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
 
 
-
-
-
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-core_2.11 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.spark</groupId>-->
-            <!--<artifactId>spark-core_2.11</artifactId>-->
-            <!--<version>${spark.core.version}</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-sql_2.11 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.spark</groupId>-->
-            <!--<artifactId>spark-sql_2.11</artifactId>-->
-            <!--<version>${spark.sql.version}</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-hive_2.11 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.spark</groupId>-->
-            <!--<artifactId>spark-hive_2.11</artifactId>-->
-            <!--<version>${spark.hive.version}</version>-->
-        <!--</dependency>-->
-
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.scala-lang/scala-library &ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>org.scala-lang</groupId>-->
             <!--<artifactId>scala-library</artifactId>-->
-            <!--<version>${scala.version}</version>-->
+            <!--<version>2.12.0-M1</version>-->
+            <!--&lt;!&ndash;<version>${scala.version}</version>&ndash;&gt;-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.hadoop</groupId>-->
+            <!--<artifactId>hadoop-common</artifactId>-->
+            <!--<version>${hadoop.common.version}</version>-->
+        <!--</dependency>-->
+
+        <!-- Inserting into cassandra from spark using datastax connector -->
+        <dependency>
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>spark-cassandra-connector_2.11</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.datastax.spark/spark-cassandra-connector-java -->
+        <dependency>
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>spark-cassandra-connector-java_2.11</artifactId>
+            <version>1.6.0-M1</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.datastax.spark</groupId>-->
+            <!--<artifactId>spark-core_2.10</artifactId>-->
+            <!--<version>2.2.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.datastax.spark</groupId>-->
+            <!--<artifactId>spark-streaming_2.10</artifactId>-->
+            <!--<version>2.2.1</version>-->
         <!--</dependency>-->
 
     </dependencies>
 
     <build>
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.3.1</version>
-                <executions>
-                    <execution>
-                        <id>enforce-version</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <bannedDependencies>
-                                    <excludes>
-                                        <!-- exclude all versions lower than 1.2.17-->
-                                        <exclude>com.fasterxml.jackson.core:jackson-databind:[0.0,1.2.17)</exclude>
-                                    </excludes>
-                                </bannedDependencies>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -173,53 +186,6 @@
             </plugin>
 
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.version}</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <manifestEntries>
-                                        <Main-Class>com.myntra.data.variance.s3.unused.DumpWsData</Main-Class>
-                                        <Premain-Class>org.datanucleus.enhancer.DataNucleusClassFileTransformer
-                                        </Premain-Class>
-                                        <Bundle-SymbolicName>org.datanucleus;singleton:=true</Bundle-SymbolicName>
-                                    </manifestEntries>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>reference.conf</resource>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                            </transformers>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
         </plugins>
     </build>
