--- a/pom.xml
+++ b/pom.xml
@@ -112,20 +112,6 @@
         </dependency>
 
 
-        <!--<dependency>-->
-            <!--<groupId>org.scala-lang</groupId>-->
-            <!--<artifactId>scala-library</artifactId>-->
-            <!--<version>2.12.0-M1</version>-->
-            <!--&lt;!&ndash;<version>${scala.version}</version>&ndash;&gt;-->
-        <!--</dependency>-->
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-common</artifactId>-->
-            <!--<version>${hadoop.common.version}</version>-->
-        <!--</dependency>-->
-
         <!-- Inserting into cassandra from spark using datastax connector -->
         <dependency>
             <groupId>com.datastax.spark</groupId>
@@ -139,16 +125,18 @@
             <version>1.6.0-M1</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.datastax.spark</groupId>-->
-            <!--<artifactId>spark-core_2.10</artifactId>-->
-            <!--<version>2.2.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.datastax.spark</groupId>-->
-            <!--<artifactId>spark-streaming_2.10</artifactId>-->
-            <!--<version>2.2.1</version>-->
-        <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
 
     </dependencies>
 
