--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <name>spark-streaming</name>
     <url>http://maven.apache.org</url>
 
+    <repositories>
+        <repository>
+            <id>DataStax-Repo</id>
+            <url>https://repo.datastax.com/public-repos/</url>
+        </repository>
+    </repositories>
 
     <properties>
         <slf4j.version>1.7.7</slf4j.version>
@@ -22,6 +28,9 @@
         <!--<scala.version>2.11.0</scala.version>-->
         <scala.version>2.11.8</scala.version>
         <hadoop.common.version>2.4.1</hadoop.common.version>
+
+        <commons-configuration.version>1.10</commons-configuration.version>
+        <hadoop.client.version>2.5.2</hadoop.client.version>
     </properties>
 
 
@@ -42,7 +51,6 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-
 
 
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
@@ -111,6 +119,18 @@
             <version>${spark.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
 
         <!-- Inserting into cassandra from spark using datastax connector -->
         <dependency>
@@ -125,18 +145,6 @@
             <version>1.6.0-M1</version>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.5</version>
-        </dependency>
 
     </dependencies>
 
@@ -172,7 +180,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
 
 
         </plugins>
